--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{question.subject}}</title>
-</head>
-<body>
 
-    {% if question %}
-      <h1>{{question.subject}}</h1>
-      <div>
-        {{question.content}}
+<h1>{{question.subject}}</h1>
+<div>
+{{question.content}}
 
-      </div>
+</div>
+<h5>{{question.answer_set.count}} 개 의 답변이 있습니다.</h5>
+<div>
+    <ul>
+        {% for answer in question.answer_set.all %}
+            <li>{{answer.content}}</li>
+        {% endfor%}
+    </ul>
+</div>
+<form action = "{% url 'pybo:answer_create' question.id %}" method="post">
+    {% csrf_token %}
+    <textarea name = 'content' id = 'content' rows = '15'></textarea>
+    <input type = 'submit' value = '답변등록'>
 
-   {% endif%}
-</body>
-</html>
+</form>
