--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,14 @@
 
 </head>
 <body>
+<!--네비게이션바-->
+{% include "navbar.html" %}
+
 <!--기본 템플릿 안에 삽입될 내용 start-->
 {%block content %}
 {%endblock %}
 <!--기본 템플릿 안에 삽입될 내용 end-->
+<!--Bootstrap JS-->
+<script src = "{% static 'bootstrap.min.js'%}"></script>
 </body>
 </html>
