--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,10 +1,12 @@
 {% extends 'base.html'%}
+{% load pybo_filter %}
 {% block content %}
 
 <div class="container my-3">
     <table class="table">
         <thead>
         <tr class="table-dark">
+
             <th>번호</th>
             <th>제목</th>
             <th>작성일시</th>
@@ -14,9 +16,16 @@
         {% if question_list %}
         {% for question in question_list %}
         <tr>
-            <td>{{ forloop.counter }}</td>
+            <!--  번호 = 전체건수 - 시작인덱스 - 현재인덱스 + 1          -->
+
+            <td>
+                {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter0|add:1 }}
+            </td>
             <td>
                 <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
+                {% if question.answer_set.count > 0 %}
+                <span class = "text-danger small mx-2 ">{{question.answer_set.count}}</span>
+                {% endif %}
             </td>
             <td>{{ question.create_date }}</td>
         </tr>
