--- a/templates/base.html
+++ b/templates/base.html
@@ -23,5 +23,8 @@
 <!--기본 템플릿 안에 삽입될 내용 end-->
 <!--Bootstrap JS-->
 <script src = "{% static 'bootstrap.min.js'%}"></script>
+<!--자바스크립트-->
+{%block script%}
+{%endblock%}
 </body>
 </html>
