--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -40,6 +40,9 @@
                 {% if request.user == question.author %}
                 <a href = "{% url 'pybo:question_modify' question.id %}" class = 'btn btn-sm btn-outline-secondary'>수정
                 </a>
+             <a href="#" class="delete btn btn-sm btn-outline-secondary "
+               data-uri="{% url 'pybo:answer_delete' answer.id  %}">삭제</a>
+
                 {% endif%}
 
             </div>
@@ -68,4 +71,17 @@
         <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
+{% endblock%}
+
+{%block script%}
+<script type='text/javascript'>
+const delete_elements = document.getElementsByClassName("delete");
+Array.from(delete_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        if(confirm("정말로 삭제하시겠습니까?")) {
+            location.href = this.dataset.uri;
+        };
+    });
+});
+</script>
 {% endblock%}
